if( ENABLE_EXAMPLES )
    option( ENABLE_REFLECT_EXAMPLES "Build MACE.Reflect Examples" ON )
    if( ENABLE_REFLECT_EXAMPLES )
        add_subdirectory(examples)
        add_subdirectory(tests)
    endif( ENABLE_REFLECT_EXAMPLES )
endif( ENABLE_EXAMPLES )
install( DIRECTORY include/mace/reflect DESTINATION include/mace )
